# DSA-Solving-AI-Agent

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: autogen.excalidraw  soultion.excalidraw
examples/: basic_tool_call.py  human_in_loop.py
src/: app.py  main.py
src/agents/: code_executor.py  code_executor_agent.py  problem_solver_agent.py
src/configs/: settings.py
src/teams/: dsa_team.py
src/utils/: docker_executor.py  model_client.py
