[project]
name = "dsa-solving-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.6.2",
    "autogen-core>=0.6.2",
    "autogen-ext[docker,ollama]>=0.6.2",
    "dotenv>=0.9.9",
]
